<resources>
    <string name="app_name">App_dioses</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="salir">Salir</string>
    <string name="tituloLogin">INICIAR SESION</string>
    <string name="errPassword2">Contraseña Incorrecta</string>
    <string name="errUsuario2">Usuario no encontrado</string>
    <string name="msjSesionIniciada">Sesion Iniciada</string>
    <string name="errRellenaCampos">Debes rellenar todos los campos</string>
    <string name="registro">Registrate</string>
    <string name="confirmarPassword">Confirmar Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar">Registrate</string>
    <string name="Correo">Correo Electronico</string>
    <string name="tituloRegistro">Registrar Humano</string>
    <string name="errConfirmarClave">Las contraseñas no coinciden</string>
    <string name="msjRegistroExitoso">Usuario creado correctamente</string>
    <string name="errRegistro">Error al registrar un humano</string>
    <string name="errCorreo">El correo debe se valido</string>
    <string name="eliminar">Eliminar</string>
    <string name="sin_humanos">No hay humanos</string>
    <string name="tituloProtegidos">Humanos Bajo Mi Proteccion</string>
    <string name="tituloPruebas">Pruebas Creadas</string>
    <string name="tituloPerfil">Mi Perfil</string>
    <string name="tituloCerrarSesion">Cerrar Sesion</string>
    <string name="tituloCrearHumano">Crear Humanos</string>
    <string name="tituloCrearPrueba">Crear Pruebas</string>
    <string name="tituloAsignarPrueba">Asignar Prueba</string>
    <string name="msjCerrarSesion">Cerrando Sesion</string>
    <string name="Aniadir">Añadir</string>
    <string name="numHumanos">Numero de humanos a crear</string>
    <string name="ingresaNumero">Ingresa el número</string>
    <string name="aceptar">Aceptar</string>
    <string name="msjHumanoRegistrado">El humano ha sido registrado</string>
    <string name="errHumanoExistente">El humano ya existe</string>
    <string name="msjHumanoCancelado">Cancelando la insercion de humanos</string>
    <string name="sin_pruebas">No hay pruebas</string>
    <string name="Asignar">Asignar</string>
    <string name="eliminarPrueba">Eliminar Prueba</string>
    <string name="PreguntaEliminarPrueba">¿Desea Eliminar la prueba</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cancelarEliminacion">Borrado Cancelado</string>
    <string name="Titulo">Titulo</string>
    <string name="ingresaDestino">Destino de la prueba</string>
    <string name="tipoPrueba">Tipo</string>
    <string name="crearPrueba">Crea la prueba</string>
    <string name="pregunta">Pregunta</string>
    <string name="intPregunta">Introduce la pregunta</string>
    <string name="Opcion1">Opcion 1</string>
    <string name="atributo">Atributo</string>
    <string name="Opcion2">Opcion 2</string>
    <string name="Correcta">Opcion Correcta</string>
    <string name="intrValor">Valor(1 a 5)</string>
    <string name="palabrasClave">Introduce las palabras clave separadas por comas(,)</string>
    <string name="ejPalabrasClave">amor,dinero</string>
    <string name="porcenAciertos">Porcentaje de Aciertos</string>
    <string name="dificultad">Dificultad</string>
    <string name="descripcion">Descripcion</string>
    <string name="uno">Uno</string>
    <string name="dos">Dos</string>
    <string name="textHumanoSeleccionado">Humano Seleccionado:</string>
    <string name="textEligeUnHumano">Elige un humano</string>
    <string name="AsignarAfin">Asignar al mas Afin</string>
    <string name="AsignarTodos">Asignar a todos</string>
    <string name="tituloPruebasPendientes">Pruebas Pendientes</string>
    <string name="tituloHistoricoPruebas">Historico</string>
    <string name="tituloEleccion">Pregunta de Eleccion</string>
    <string name="tituloPuntual">Prueba Puntual</string>
    <string name="tituloRespuestaLibre">Pregunta Respuesta Libre</string>
    <string name="tituloValoracion">Prueba de Afinidad</string>
    <string name="sin_PruebasPendients">No tienes pruebas pendientes</string>
    <string name="Relizar">Realizar</string>
    <string name="tipo">Tipo</string>
    <string name="destino">Destino</string>
    <string name="destino_final">Destino Final</string>
    <string name="estado">Estado</string>
    <string name="empezar">Empezar</string>
    <string name="Resultado">Resultado</string>
    <string name="respuesta">Respuesta</string>
    <string name="IntrRespuesta">Escribe la respuesta</string>
    <string name="enviar">Enviar respuesta</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="editar">Editar</string>
    <string name="sabiduria">Sabiduria</string>
    <string name="nobleza">Nobleza</string>
    <string name="virtud">Virtud</string>
    <string name="audacia">Audacia</string>
    <string name="maldad">Maldad</string>
</resources>