<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ventanas.Humano.FragRespuestaLibre">

    <TextView
        android:id="@+id/lbResultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="300dp"
        android:layout_height="48dp"


        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <TextView
        android:id="@+id/tvTituloPrueba"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:backgroundTintMode="src_in"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="301dp"
        android:layout_height="90dp"

        android:backgroundTintMode="src_in"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="345dp"
        android:layout_height="148dp"
        android:hint="@string/IntrRespuesta"
        android:maxHeight="300dp"
        android:minHeight="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:minHeight="180dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lbTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/lbPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/lbRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuesta"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

</androidx.constraintlayout.widget.ConstraintLayout>